// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Picture ] should render Border 1`] = `
<DocumentFragment>
  <picture
    class="picture with-border"
  >
    <img
      src="https://picsum.photos/id/1033/400/400"
      style="height: auto; max-width: 200px;"
    />
  </picture>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Picture ] should render Default 1`] = `
<DocumentFragment>
  <picture
    class="picture"
  >
    <img
      src="https://picsum.photos/id/1033/400/400"
      style="height: auto; max-width: 200px;"
    />
  </picture>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Picture ] should render Height 1`] = `
<DocumentFragment>
  <picture
    class="picture"
  >
    <img
      src="https://picsum.photos/id/1033/400/400"
      style="height: 400px; max-width: 200px;"
    />
  </picture>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Picture ] should render Rounded 1`] = `
<DocumentFragment>
  <picture
    class="picture is-rounded"
  >
    <img
      src="https://picsum.photos/id/1033/400/400"
      style="height: auto; max-width: 200px;"
    />
  </picture>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Picture ] should render Width 1`] = `
<DocumentFragment>
  <picture
    class="picture"
  >
    <img
      src="https://picsum.photos/id/1033/400/400"
      style="height: auto; max-width: 200px;"
    />
  </picture>
</DocumentFragment>
`;
